--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.8'
+
 services:
   web:
     build: .
@@ -9,6 +10,8 @@ services:
       - .env
     depends_on:
       - db
+    volumes:
+      - .:/app
 
   db:
     image: mariadb:10.7
