--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 FLASK_APP=run.py
 FLASK_ENV=development
-DATABASE_URL=mysql+pymysql://user:password@db:3306/backlink
+DATABASE_URL=mysql+pymysql://user:userpass@db:3306/backlink?charset=utf8mb4
