--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
       - dbdata:/var/lib/mysql
 
     environment:
-      MYSQL_ROOT_PASSWORD: rootpass
+      MYSQL_ROOT_PASSWORD: Asli281019*Cagdas
       MYSQL_DATABASE: backlink
       MYSQL_USER: user
-      MYSQL_PASSWORD: userpass
+      MYSQL_PASSWORD: Asli281019*Cagdas
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 5s
@@ -25,7 +25,7 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - SQLALCHEMY_DATABASE_URI=mysql+pymysql://user:userpass@db:3306/backlink?charset=utf8mb4
+      - SQLALCHEMY_DATABASE_URI=mysql+pymysql://user:Asli281019*Cagdas@db:3306/backlink?charset=utf8mb4
 
 volumes:
   dbdata:
