--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,12 @@ services:
 
 
   web:
+    deploy:
+      resources:
+        limits:
+          memory: 1g    # ya da daha yüksek bir değer
     build: .
-    command: gunicorn -w 4 -b 0.0.0.0:5000 run:app
+    command: gunicorn -w 4 -b 0.0.0.0:5000 run:app --timeout 120
     depends_on:
       db:
         condition: service_healthy      #  ⬅️ bekle
